Changed some text
Changed paragraphs that didn't work well

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                             <h3 class="job-title">PhD Student</h3>
                             <div class="time">Aug 2015 - Present</div><!--/time-->
                         </div><!--/upper-row-->
-                        <div class="company">VU University, Amsterdam</div><!--/company-->
+                        <div class="company">VU, Amsterdam</div><!--/company-->
                     </div><!--/meta-info-->
                     <div class="details">
-                        <p>As a PhD student at the department of Clinical Psychology at VU University Amsterdam, I am investigating Patient Reported Outcome Measures used in psychosocial oncology. Currently I am investigating the psychometric properties of 39 PROMs through a systematic review, and validating the Dutch version of the eHealth Impact Questionnaire.</p>
+                        <p>As a PhD student at the department of Clinical Psychology at VU Amsterdam, I am investigating Patient Reported Outcome Measures used in psychosocial oncology. Currently I am investigating the psychometric properties of 39 PROMs through a systematic review, and validating the Dutch version of the eHealth Impact Questionnaire.</p>
 
                         <p>In the future of my personal PhD project, I intend to use data mining and machine learning techniques to delve into the big database of PROM responses collected by Oncokompas 2.0.</p>
 
@@ -93,7 +93,7 @@
 					</div><!--/menu-picker-->
 					<div id="pages">
 						<div class="mydivshow portfolio1">
-							<p class="portfolio-text">Analyzing data is my pride and joy. Nothing (perhaps apart from some hobbies) is more fun than finding the right analysis for the right data set to answer a research question. I am a large proponent of using correct analytical methods. As such, when I find an analysis that is best suited for a question I want answered and I do not yet master that analysis, I will always take the time to get acquainted with the better analysis. This way, I have collected quite some proficiencies in a range of analytical methods. I try to advocate proper methodology and data-analysis by being available to colleagues to discuss and advice on these matters.</p>
+							<p class="portfolio-text">Analyzing data is my pride and joy. Very little is more fulfilling than finding the right analysis for the right data set, to answer a research question. I am a large proponent of using correct analytical methods. As such, when I learn of an analysis that is best suited for a question I want answered, and I do not yet master that analysis, I will always take the time to get acquainted with the new analysis. This way, I have collected quite some proficiencies in a range of analytical methods. I try to advocate proper methodology and data-analysis by being available to colleagues to discuss and advice on these matters.</p>
 							<div class="showcase-container">
 								<h2 class="portfolio-title">Portfolio</h2>
 							</div><!--/showcase-container-->
@@ -112,7 +112,7 @@
 							</div><!--/skills-container-->
 						</div><!--/portfolio-div1-->
 						<div class="mydivhide portfolio2">
-							<p class="portfolio-text">My academic career started during my <em>Research Master: Behavioural Science</em> where I specialized in Behavioural Science and advanced data-analysis. I specialized in one further topic within Behaviour Science: Behavioura Risky Decision-Making. Currently, as a PhD student I am focusing on measurement properties of Patient Reported Outcome Measures for cancer patients. I am also looking to delve into the opportunities of using Machine Learning and Data Mining to delve into large datasets of Patient Reported Outcome Measures.</p>
+							<p class="portfolio-text">My academic career started during my <em>Research Master: Behavioural Science</em> where I specialized in Behavioural Science and advanced data-analysis. In particular, I specialized in Behavioural Risky Decision-Making. Currently, as a PhD student I am focusing on measurement properties of Patient Reported Outcome Measures for cancer patients. I am also looking to delve into the opportunities of using Machine Learning and Data Mining to delve into large datasets of Patient Reported Outcome Measures.</p>
 							<div class="showcase-container">
 								<h2 class="portfolio-title">Publications</h2>
 								<p class="reference">Anderson, C. J., Bahník, Š., Barnett-Cowan, M., Bosco, F. A., Chandler, J., Chartier, C. R., ... & Della Penna, N. (2016). Response to comment on “estimating the reproducibility of psychological science”. <em>Science, 351(6277)</em>, 1037-1037. <a href="10.1126/science.aad9163" target="_blank">doi:10.1126/science.aad9163</a></p>
@@ -145,7 +145,7 @@
 							</div><!--/skills-container-->
 						</div><!--/portfolio-div2-->
 						<div class="mydivhide portfolio3">
-							<p class="portfolio-text">Am I a developer? Not really, but I enjoy coding! I started coding in Python to set up behavioural experiments, as well as coding in R for data-analysis. While R isn't a traditional programming language, it is object-oriented as well. Because I enjoy this kind of coding, I delved back into HTML and CSS to build this website. I'm looking to keep creating small coding projects in my free time (which is very sparse as a PhD student).</p>
+							<p class="portfolio-text">Am I a developer? Not really, but I enjoy coding! I started coding in Python to set up behavioural experiments, as well as coding in R for data-analysis. Because I enjoy this kind of coding, I delved back into HTML and CSS to build this website. I'm looking to keep creating small coding projects in my free time (which is very sparse as a PhD student).</p>
 							<div class="showcase-container">
 								<h2 class="portfolio-title">Portfolio</h2>
 							</div><!--/showcase-container-->
