Fixed text and added links to publications etc

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			</header><!--/header-->
 			<main>
 				<section class="summ-box">
-					<p class="summary-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tria genera bonorum; Nec vero alia sunt quaerenda contra Carneadeam illam sententiam. Quae quidem vel cum periculo est quaerenda vobis; Beatum, inquit. Duo Reges: constructio interrete.</p>
+					<p class="summary-text">If I were to describe myself in two words it would be "Data Nerd". Once I realized I enjoyed using and explaining a large variety of statistical techniques, I realized I wanted to work with data on a daily basis. I enrolled into one of the Top Research Master Programmes in Behavioural Science, which I finished Cum Laude. Currently, I am working as a PhD student at the VU Amsterdam, where I focus on psychometrics and big data. I am looking forward to a career where I can (responsibly) play around with data on a daily basis.</p>
 					<div class="line-break"></div><!--/line-break-->
 				</section><!--/summ-box-->
 				<section class="experience-box">
@@ -53,9 +53,9 @@
                         <div class="company">VU, Amsterdam</div><!--/company-->
                     </div><!--/meta-info-->
                     <div class="details">
-                        <p>As a PhD student at the department of Clinical Psychology at VU Amsterdam, I am investigating Patient Reported Outcome Measures used in psychosocial oncology. Currently I am investigating the psychometric properties of 39 PROMs through a systematic review, and validating the Dutch version of the eHealth Impact Questionnaire.</p>
+                        <p>As a PhD student at the department of Clinical Psychology at VU Amsterdam, I am investigating Patient Reported Outcome Measures used in the field of psychosocial oncology. Currently I am investigating the psychometric properties of 39 PROMs through a systematic review, and validating the Dutch version of the eHealth Impact Questionnaire.</p>
 
-                        <p>In the future of my personal PhD project, I intend to use data mining and machine learning techniques to delve into the big database of PROM responses collected by Oncokompas 2.0.</p>
+                        <p>In the future of my PhD project, I intend to use data mining and machine learning techniques to delve into the big database of PROM responses collected by <a href="http://www.samenlevenmetkanker.nl/?p=305-Oncokompas2.0" target="_blank">Oncokompas 2.0.</a></p>
 
                         <p>Due to my focus and expertise on data-analysis, I am providing statistical support to both internal projects as well as to various research projects of War Child.</p>
                     </div><!--/details-->
@@ -81,7 +81,7 @@
                         <div class="company">Radboud University, Nijmegen</div><!--/company-->
                     </div><!--/meta-info-->
                     <div class="details">
-                        <p>I taught practical classes for the university-level Bachelor courses (i.e. Methods of Research (B1), Statistics 2 (B2), Psychometric and Decision Analysis (B2), and Data-analysis (B2).</p>  
+                        <p>I taught practical classes for university-level Bachelor courses (i.e. Methods of Research (B1), Statistics 2 (B2), Psychometric and Decision Analysis (B2), and Data-analysis (B2).</p>  
                     </div><!--/details-->
 					</div><!--/item-->
 				</section><!--/experience-box-->
@@ -94,7 +94,7 @@
 					</div><!--/menu-picker-->
 					<div id="pages">
 						<div class="mydivshow portfolio1">
-							<p class="portfolio-text">Analyzing data is my pride and joy. Very little is more fulfilling than finding the right analysis for the right data set, to answer a research question. I am a large proponent of using correct analytical methods. As such, when I learn of an analysis that is best suited for a question I want answered, and I do not yet master that analysis, I will always take the time to get acquainted with the new analysis. This way, I have collected quite some proficiencies in a range of analytical methods. I try to advocate proper methodology and data-analysis by being available to colleagues to discuss and advice on these matters.</p>
+							<p class="portfolio-text">Analyzing data is my pride and joy. Very little is more fulfilling than finding the right analysis for the right data set, to answer a research question. I am a large proponent of using correct analytical methods. As such, I try to keep up with state-of-the-art analysis techniques that are best suited to answer questions I am working on. I have collected quite some proficiencies in a range of analytical methods. I try to advocate proper methodology and data-analysis by being available to colleagues to discuss and advice on these matters.</p>
 							<div class="showcase-container">
 								<h2 class="portfolio-title">Portfolio</h2>
 							</div><!--/showcase-container-->
@@ -116,9 +116,9 @@
 							<p class="portfolio-text">My academic career started during my <em>Research Master: Behavioural Science</em> where I specialized in Behavioural Science and advanced data-analysis. In particular, I specialized in Behavioural Risky Decision-Making. Currently, as a PhD student I am focusing on measurement properties of Patient Reported Outcome Measures for cancer patients. I am also looking to delve into the opportunities of using Machine Learning and Data Mining to delve into large datasets of Patient Reported Outcome Measures.</p>
 							<div class="showcase-container">
 								<h2 class="portfolio-title">Publications</h2>
-								<p class="reference">Anderson, C. J., Bahník, Š., Barnett-Cowan, M., Bosco, F. A., Chandler, J., Chartier, C. R., ... & Della Penna, N. (2016). Response to comment on “estimating the reproducibility of psychological science”. <em>Science, 351(6277)</em>, 1037-1037. <a href="10.1126/science.aad9163" target="_blank">doi:10.1126/science.aad9163</a></p>
-								<p class="reference">Open Science Collaboration. (2015). Estimating the reproducibility of psychological science. <em>Science, 349</em>. <a href="10.1126/science.aac4716" target="_blank">doi:10.1126/science.aac4716</a></p>
-								<p class="reference">Sommers, R. P., Dings, R., Neijenhuijs, K. I., Andringa, H., Arts, S., van de Bult, D., ... & Haselager, P. F. (2015). A young scientists’ perspective on DBS: a plea for an international DBS organization. <em>Neuroethics, 8(2)</em>, 187-190. <a href="10.1007/s12152-015-9231-x" target="_blank">doi:10.1007/s12152-015-9231-x</a></p>
+								<p class="reference">Anderson, C. J., Bahník, Š., Barnett-Cowan, M., Bosco, F. A., Chandler, J., Chartier, C. R., ... & Della Penna, N. (2016). Response to comment on “estimating the reproducibility of psychological science”. <em>Science, 351(6277)</em>, 1037-1037. <a href="https://doi.org/10.1126/science.aad9163" target="_blank">doi:10.1126/science.aad9163</a></p>
+								<p class="reference">Open Science Collaboration. (2015). Estimating the reproducibility of psychological science. <em>Science, 349</em>. <a href="https://doi.org/10.1126/science.aac4716" target="_blank">doi:10.1126/science.aac4716</a></p>
+								<p class="reference">Sommers, R. P., Dings, R., Neijenhuijs, K. I., Andringa, H., Arts, S., van de Bult, D., ... & Haselager, P. F. (2015). A young scientists’ perspective on DBS: a plea for an international DBS organization. <em>Neuroethics, 8(2)</em>, 187-190. <a href="https://doi.org/10.1007/s12152-015-9231-x" target="_blank">doi:10.1007/s12152-015-9231-x</a></p>
 							</div><!--/showcase-container-->
 							<div class="showcase-container">
 							<h2 class="portfolio-title">Grants</h2>
@@ -146,7 +146,7 @@
 							</div><!--/skills-container-->
 						</div><!--/portfolio-div2-->
 						<div class="mydivhide portfolio3">
-							<p class="portfolio-text">Am I a developer? Not really, but I enjoy coding! I started coding in Python to set up behavioural experiments, as well as coding in R for data-analysis. Because I enjoy this kind of coding, I delved back into HTML and CSS to build this website. I'm looking to keep creating small coding projects in my free time (which is very sparse as a PhD student).</p>
+							<p class="portfolio-text">Am I a developer? Not really, but I enjoy coding! I started coding in Python to set up behavioural experiments, as well as coding in R for data-analyses. Because I enjoy this kind of coding, I delved back into HTML and CSS (which I hadn't touched since I was 15) to build this website. I'm looking to keep creating small coding projects in my free time (which is very sparse as a PhD student).</p>
 							<div class="showcase-container">
 								<h2 class="portfolio-title">Portfolio</h2>
 							</div><!--/showcase-container-->
@@ -174,7 +174,7 @@
                         <div class="company">Radboud University, Nijmegen</div><!--/company-->
                     </div><!--/meta-info-->
                     <div class="details">
-                        <p>I completed my Research Master program Cum Laude. The program focused on the use of the scientific method in Behaviour Science. My last year I specialized in Decision-Making research, in particular Risky Decision-Making in Adolescents. My masterthesis is available on <b>link here</b>.</p>  
+                        <p>I completed the Research Master program Cum Laude. The program focused on the use of the scientific method in Behavioural Sciences. During my last year I specialized in Decision-Making research, in particular Risky Decision-Making in Adolescents. My masterthesis is available <a href="./assets/Masterthesis Koen Neijenhuijs.pdf" target="_blank">here</a>.</p>  
                     </div><!--/details-->
 					</div><!--/item-->
 					<div class="item">
@@ -186,7 +186,7 @@
                         <div class="company">Radboud University, Nijmegen</div><!--/company-->
                     </div><!--/meta-info-->
                     <div class="details">
-                        <p>In my second year of my Research Master, I travelled to Glasgow University to visir dr. Dale Barr. In Glasgow I worked on learning the intricacies of writing R packages, writing simulation studies, and the mathematics behind Mixed-Effect Models.</p>  
+                        <p>During my second year of the Research Master, I travelled to Glasgow University to visir dr. Dale Barr. In Glasgow I worked on the intricacies of writing R packages, programming simulation studies, and the mathematics behind Mixed-Effect Models.</p>  
                     </div><!--/details-->
 					</div><!--/item-->
 					<div class="item">
@@ -198,7 +198,7 @@
                         <div class="company">Radboud University, Nijmegen</div><!--/company-->
                     </div><!--/meta-info-->
                     <div class="details">
-                        <p>In my first year of my Research Master, I collaberated with 7 other Master Students from differing disciplines. Tasked by the Health Council of the Netherlands, we delved into the specifics of the 'Wider Implications of Deep Brain Stimulation'. The end result was a report and publication in <i>Neuroethics</i>.</p>  
+                        <p>During my first year of the Research Master, I collaberated with 7 other Master Students from differing disciplines. Tasked by the Health Council of the Netherlands, we delved into the specifics of the 'Wider Implications of Deep Brain Stimulation'. The end result was a report and publication in <a href="https://doi.org/10.1007/s12152-015-9231-x" target="_blank"><i>Neuroethics</i></a>.</p>  
                     </div><!--/details-->
 					</div><!--/item-->
 					<div class="item">
@@ -210,7 +210,7 @@
                         <div class="company">Radboud University, Nijmegen</div><!--/company-->
                     </div><!--/meta-info-->
                     <div class="details">
-                        <p>I completed my Bachelor's Degree in Psychology. The Bachelor program focused on both the scientific discipline in Psychology, as its application in practice.</p>  
+                        <p>I completed my Bachelor's Degree in Psychology. The Bachelor program focused on both the scientific discipline of Psychology, as its application in practice.</p>  
                     </div><!--/details-->
 					</div><!--/item-->
 				</section><!--/education-box-->
