--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<div class="profile-container">
 					<div class="social-container">
 							<ul class="contact-list">
-					<li class="email"><a href="mailto: yourname@email.com"><i class="fa fa-envelope" aria-hidden="true"></i></a><a href="mailto: info@kneijenhuijs.com">info@kneijenhuijs.com</a></li>
+					<li class="email"><a href="mailto: yourname@email.com"><i class="fa fa-envelope" aria-hidden="true"></i></a><a href="mailto: contact@kneijenhuijs.com">contact@kneijenhuijs.com</a></li>
 					<li class="linkedin"><a href="http://www.google.com" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a><a href="https://www.linkedin.com/in/koenneijenhuijs/" target="_blank">linkedin.com/in/koenneijenhuijs</a></li>
 					<li class="github"><a href="http://www.google.com" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a><a href="https://github.com/kneijenhuijs" target="_blank">github.com/kneijenhuijs</a></li>
 					<li class="twitter"><a href="http://www.google.com" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="https://twitter.com/KNeijenhuijs" target="_blank">@KNeijenhuijs</a></li>
