--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Resume Template</title>
+  <title>Koen Neijenhuijs - About Me</title>
   	<link rel="stylesheet" href="css/style.css">
 
   
