--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html >
-<head>
-  <meta charset="UTF-8">
-  <title>Koen Neijenhuijs - About Me</title>
-  	<link rel="stylesheet" href="css/style.css">
-
-  
-</head>
-
-<body>
-  <html>
 	<head>
+	 	<meta charset="UTF-8">
+		<title>Koen Neijenhuijs - About Me</title>
+		<link rel="stylesheet" href="css/style.css">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	  	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+		<script src="js/index.js"></script>
 	</head>
+
 	<body>
 		<div class="wrapper">
 			<header>
@@ -44,44 +41,44 @@
 				<section class="experience-box">
 					<h2 class="section-title">Work Experience</h2>
 					<div class="item">
-                    <div class="meta-info">
-                        <div class="upper-row">
-                            <h3 class="job-title">PhD Student</h3>
-                            <div class="time">Aug 2015 - Present</div><!--/time-->
-                        </div><!--/upper-row-->
-                        <div class="company">VU, Amsterdam</div><!--/company-->
-                    </div><!--/meta-info-->
-                    <div class="details">
-                        <p>As a PhD student at the department of Clinical Psychology at VU Amsterdam, I am investigating Patient Reported Outcome Measures used in the field of psychosocial oncology. Currently I am investigating the psychometric properties of 39 PROMs through a systematic review, and validating the Dutch version of the eHealth Impact Questionnaire.</p>
+		            <div class="meta-info">
+		                <div class="upper-row">
+		                    <h3 class="job-title">PhD Student</h3>
+		                    <div class="time">Aug 2015 - Present</div><!--/time-->
+		                </div><!--/upper-row-->
+		                <div class="company">VU, Amsterdam</div><!--/company-->
+		            </div><!--/meta-info-->
+		            <div class="details">
+		                <p>As a PhD student at the department of Clinical Psychology at VU Amsterdam, I am investigating Patient Reported Outcome Measures used in the field of psychosocial oncology. Currently I am investigating the psychometric properties of 39 PROMs through a systematic review, and validating the Dutch version of the eHealth Impact Questionnaire.</p>
 
-                        <p>In the future of my PhD project, I intend to use data mining and machine learning techniques to delve into the big database of PROM responses collected by <a href="http://www.samenlevenmetkanker.nl/?p=305-Oncokompas2.0" target="_blank">Oncokompas 2.0.</a></p>
+		                <p>In the future of my PhD project, I intend to use data mining and machine learning techniques to delve into the big database of PROM responses collected by <a href="http://www.samenlevenmetkanker.nl/?p=305-Oncokompas2.0" target="_blank">Oncokompas 2.0.</a></p>
 
-                        <p>Due to my focus and expertise on data-analysis, I am providing statistical support to both internal projects as well as to various research projects of War Child.</p>
-                    </div><!--/details-->
+		                <p>Due to my focus and expertise on data-analysis, I am providing statistical support to both internal projects as well as to various research projects of War Child.</p>
+		            </div><!--/details-->
 					</div><!--/item-->
 					<div class="item">
-                    <div class="meta-info">
-                        <div class="upper-row">
-                            <h3 class="job-title">Statistical Consultant</h3>
-                            <div class="time">Mar 2014 - Jul 2015</div><!--/time-->
-                        </div><!--/upper-row-->
-                        <div class="company">Radboud University, Nijmegen</div><!--/company-->
-                    </div><!--/meta-info-->
-                    <div class="details">
-                        <p>I provided statistical and methodological support to Bachelor and Master students.</p>  
-                    </div><!--/details-->
+		            <div class="meta-info">
+		                <div class="upper-row">
+		                    <h3 class="job-title">Statistical Consultant</h3>
+		                    <div class="time">Mar 2014 - Jul 2015</div><!--/time-->
+		                </div><!--/upper-row-->
+		                <div class="company">Radboud University, Nijmegen</div><!--/company-->
+		            </div><!--/meta-info-->
+		            <div class="details">
+		                <p>I provided statistical and methodological support to Bachelor and Master students.</p>  
+		            </div><!--/details-->
 					</div><!--/item-->
 					<div class="item">
-                    <div class="meta-info">
-                        <div class="upper-row">
-                            <h3 class="job-title">Teaching Assistant (Bachelor Psychology)</h3>
-                            <div class="time">Sep 2012 - Jul 2015</div><!--/time-->
-                        </div><!--/upper-row-->
-                        <div class="company">Radboud University, Nijmegen</div><!--/company-->
-                    </div><!--/meta-info-->
-                    <div class="details">
-                        <p>I taught practical classes for university-level Bachelor courses (i.e. Methods of Research (B1), Statistics 2 (B2), Psychometric and Decision Analysis (B2), and Data-analysis (B2).</p>  
-                    </div><!--/details-->
+		            <div class="meta-info">
+		                <div class="upper-row">
+		                    <h3 class="job-title">Teaching Assistant (Bachelor Psychology)</h3>
+		                    <div class="time">Sep 2012 - Jul 2015</div><!--/time-->
+		                </div><!--/upper-row-->
+		                <div class="company">Radboud University, Nijmegen</div><!--/company-->
+		            </div><!--/meta-info-->
+		            <div class="details">
+		                <p>I taught practical classes for university-level Bachelor courses (i.e. Methods of Research (B1), Statistics 2 (B2), Psychometric and Decision Analysis (B2), and Data-analysis (B2).</p>  
+		            </div><!--/details-->
 					</div><!--/item-->
 				</section><!--/experience-box-->
 				<div class="line-break"></div><!--/line-break-->
@@ -119,15 +116,15 @@
 							<div class="showcase-container">
 							<h2 class="portfolio-title">Grants</h2>
 							<div class="meta-info">
-                        		<div class="upper-row">
-                           			<h3 class="grant-title">Grant Consumer eHealth</h3>
-                            		<div class="time">January 2017</div><!--/time-->
-                        		</div><!--/upper-row-->
-                        		<div class="grant-company">NFU Citrien</div><!--/company-->
-                    		</div><!--/meta-info-->
-                    		<div class="details">
-                        		<p class="portfolio-text">Grant awarded by the NFU funded by the Citrienfund, for translating and validating the eHealth Impact Question for the Dutch population of eHealth users (eHIQ-NL). For more information on this project, see <a href="https://www.nfu-ehealth.nl/projecten/alle-projecten/de-nederlandse-e-health-impact-questionnaire-ehiq/">here</a>.</p>  
-                    		</div><!--/details-->
+		                		<div class="upper-row">
+		                   			<h3 class="grant-title">Grant Consumer eHealth</h3>
+		                    		<div class="time">January 2017</div><!--/time-->
+		                		</div><!--/upper-row-->
+		                		<div class="grant-company">NFU Citrien</div><!--/company-->
+		            		</div><!--/meta-info-->
+		            		<div class="details">
+		                		<p class="portfolio-text">Grant awarded by the NFU funded by the Citrienfund, for translating and validating the eHealth Impact Question for the Dutch population of eHealth users (eHIQ-NL). For more information on this project, see <a href="https://www.nfu-ehealth.nl/projecten/alle-projecten/de-nederlandse-e-health-impact-questionnaire-ehiq/">here</a>.</p>  
+		            		</div><!--/details-->
 							</div><!--/showcase-container-->
 							<div class="skills-container">
 								<h2 class="portfolio-title">Areas of Expertise</h2>
@@ -159,52 +156,52 @@
 				<section class="education-box">
 					<h2 class="section-title">Education</h2>
 					<div class="item">
-                    <div class="meta-info">
-                        <div class="upper-row">
-                            <h3 class="job-title">Master's Degree (Research), <br>Research: Behavioural Science, Cum Laude</h3>
-                            <div class="time">2013 - 2015</div><!--/time-->
-                        </div><!--/upper-row-->
-                        <div class="company">Radboud University, Nijmegen</div><!--/company-->
-                    </div><!--/meta-info-->
-                    <div class="details">
-                        <p>I completed the Research Master program Cum Laude. The program focused on the use of the scientific method in Behavioural Sciences. During my last year I specialized in Decision-Making research, in particular Risky Decision-Making in Adolescents. My masterthesis is available <a href="./assets/Masterthesis Koen Neijenhuijs.pdf" target="_blank">here</a>.</p>  
-                    </div><!--/details-->
+		            <div class="meta-info">
+		                <div class="upper-row">
+		                    <h3 class="job-title">Master's Degree (Research), <br>Research: Behavioural Science, Cum Laude</h3>
+		                    <div class="time">2013 - 2015</div><!--/time-->
+		                </div><!--/upper-row-->
+		                <div class="company">Radboud University, Nijmegen</div><!--/company-->
+		            </div><!--/meta-info-->
+		            <div class="details">
+		                <p>I completed the Research Master program Cum Laude. The program focused on the use of the scientific method in Behavioural Sciences. During my last year I specialized in Decision-Making research, in particular Risky Decision-Making in Adolescents. My masterthesis is available <a href="./assets/Masterthesis Koen Neijenhuijs.pdf" target="_blank">here</a>.</p>  
+		            </div><!--/details-->
 					</div><!--/item-->
 					<div class="item">
-                    <div class="meta-info">
-                        <div class="upper-row">
-                            <h3 class="job-title">Honours Academy Degree, <br>Beyond the Frontiers</h3>
-                            <div class="time">2014 - 2015</div><!--/time-->
-                        </div><!--/upper-row-->
-                        <div class="company">Radboud University, Nijmegen</div><!--/company-->
-                    </div><!--/meta-info-->
-                    <div class="details">
-                        <p>During my second year of the Research Master, I travelled to Glasgow University to visir dr. Dale Barr. In Glasgow I worked on the intricacies of writing R packages, programming simulation studies, and the mathematics behind Mixed-Effect Models.</p>  
-                    </div><!--/details-->
+		            <div class="meta-info">
+		                <div class="upper-row">
+		                    <h3 class="job-title">Honours Academy Degree, <br>Beyond the Frontiers</h3>
+		                    <div class="time">2014 - 2015</div><!--/time-->
+		                </div><!--/upper-row-->
+		                <div class="company">Radboud University, Nijmegen</div><!--/company-->
+		            </div><!--/meta-info-->
+		            <div class="details">
+		                <p>During my second year of the Research Master, I travelled to Glasgow University to visir dr. Dale Barr. In Glasgow I worked on the intricacies of writing R packages, programming simulation studies, and the mathematics behind Mixed-Effect Models.</p>  
+		            </div><!--/details-->
 					</div><!--/item-->
 					<div class="item">
-                    <div class="meta-info">
-                        <div class="upper-row">
-                            <h3 class="job-title">Honours Academy Degree, <br>Wider Implications of Neuroscience</h3>
-                            <div class="time">2013 - 2014</div><!--/time-->
-                        </div><!--/upper-row-->
-                        <div class="company">Radboud University, Nijmegen</div><!--/company-->
-                    </div><!--/meta-info-->
-                    <div class="details">
-                        <p>During my first year of the Research Master, I collaberated with 7 other Master Students from differing disciplines. Tasked by the Health Council of the Netherlands, we delved into the specifics of the 'Wider Implications of Deep Brain Stimulation'. The end result was a report and publication in <a href="https://doi.org/10.1007/s12152-015-9231-x" target="_blank"><i>Neuroethics</i></a>.</p>  
-                    </div><!--/details-->
+		            <div class="meta-info">
+		                <div class="upper-row">
+		                    <h3 class="job-title">Honours Academy Degree, <br>Wider Implications of Neuroscience</h3>
+		                    <div class="time">2013 - 2014</div><!--/time-->
+		                </div><!--/upper-row-->
+		                <div class="company">Radboud University, Nijmegen</div><!--/company-->
+		            </div><!--/meta-info-->
+		            <div class="details">
+		                <p>During my first year of the Research Master, I collaberated with 7 other Master Students from differing disciplines. Tasked by the Health Council of the Netherlands, we delved into the specifics of the 'Wider Implications of Deep Brain Stimulation'. The end result was a report and publication in <a href="https://doi.org/10.1007/s12152-015-9231-x" target="_blank"><i>Neuroethics</i></a>.</p>  
+		            </div><!--/details-->
 					</div><!--/item-->
 					<div class="item">
-                    <div class="meta-info">
-                        <div class="upper-row">
-                            <h3 class="job-title">Bachelor's Degree, <br>Psychology</h3>
-                            <div class="time">2008 - 2013</div><!--/time-->
-                        </div><!--/upper-row-->
-                        <div class="company">Radboud University, Nijmegen</div><!--/company-->
-                    </div><!--/meta-info-->
-                    <div class="details">
-                        <p>I completed my Bachelor's Degree in Psychology. The Bachelor program focused on both the scientific discipline of Psychology, as its application in practice.</p>  
-                    </div><!--/details-->
+		            <div class="meta-info">
+		                <div class="upper-row">
+		                    <h3 class="job-title">Bachelor's Degree, <br>Psychology</h3>
+		                    <div class="time">2008 - 2013</div><!--/time-->
+		                </div><!--/upper-row-->
+		                <div class="company">Radboud University, Nijmegen</div><!--/company-->
+		            </div><!--/meta-info-->
+		            <div class="details">
+		                <p>I completed my Bachelor's Degree in Psychology. The Bachelor program focused on both the scientific discipline of Psychology, as its application in practice.</p>  
+		            </div><!--/details-->
 					</div><!--/item-->
 				</section><!--/education-box-->
 				<div class="line-break"></div><!--/line-break-->
@@ -231,11 +228,5 @@
 		<footer>
 			<p class="copyright">&copy Koen Neijenhuijs, 2017</p>
 		</footer><!--/footer-->
-	</body>	
-</html>
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js'></script>
-    <script src="js/index.js"></script>
-
-</body>
+	</body>
 </html>
