--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html >
 	<head>
 	 	<meta charset="UTF-8">
+	 	<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Koen Neijenhuijs - About Me</title>
 		<link rel="stylesheet" href="css/style.css">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -21,11 +22,11 @@
 				</div><!--/name-container-->
 				<div class="profile-container">
 					<div class="social-container">
-							<ul class="contact-list">
-					<li class="email"><a href="mailto: yourname@email.com"><i class="fa fa-envelope" aria-hidden="true"></i></a><a href="mailto: contact@kneijenhuijs.com">contact@kneijenhuijs.com</a></li>
-					<li class="linkedin"><a href="http://www.google.com" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a><a href="https://www.linkedin.com/in/koenneijenhuijs/" target="_blank">linkedin.com/in/koenneijenhuijs</a></li>
-					<li class="github"><a href="http://www.google.com" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a><a href="https://github.com/kneijenhuijs" target="_blank">github.com/kneijenhuijs</a></li>
-					<li class="twitter"><a href="http://www.google.com" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="https://twitter.com/KNeijenhuijs" target="_blank">@KNeijenhuijs</a></li>
+						<ul class="contact-list">
+							<li class="email"><a href="mailto: yourname@email.com"><i class="fa fa-envelope" aria-hidden="true"></i></a><p class="contacttext"><a href="mailto: contact@kneijenhuijs.com">contact@kneijenhuijs.com</a></p></li>
+							<li class="linkedin"><a href="http://www.google.com" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a><p class="contacttext"><a class="contacttext" href="https://www.linkedin.com/in/koenneijenhuijs/" target="_blank">linkedin.com/in/koenneijenhuijs</a></p></li>
+							<li class="github"><a href="http://www.google.com" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a><p class="contacttext"><a href="https://github.com/kneijenhuijs" target="_blank">github.com/kneijenhuijs</a></p></li>
+							<li class="twitter"><a href="http://www.google.com" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a><p class="contacttext"><a href="https://twitter.com/KNeijenhuijs" target="_blank">@KNeijenhuijs</a></p></li>
 						</ul>
 					</div><!--/social-container-->
 					<div class="picture-container">
@@ -47,6 +48,7 @@
 		                    <div class="time">Aug 2015 - Present</div><!--/time-->
 		                </div><!--/upper-row-->
 		                <div class="company">VU, Amsterdam</div><!--/company-->
+		                <div class="timeMobile">Aug 2015 - Present</div><!--/timeMobile-->
 		            </div><!--/meta-info-->
 		            <div class="details">
 		                <p>As a PhD student at the department of Clinical Psychology at VU Amsterdam, I am investigating Patient Reported Outcome Measures used in the field of psychosocial oncology. Currently I am investigating the psychometric properties of 39 PROMs through a systematic review, and validating the Dutch version of the eHealth Impact Questionnaire.</p>
@@ -62,7 +64,8 @@
 		                    <h3 class="job-title">Statistical Consultant</h3>
 		                    <div class="time">Mar 2014 - Jul 2015</div><!--/time-->
 		                </div><!--/upper-row-->
-		                <div class="company">Radboud University, Nijmegen</div><!--/company-->
+		                <div class="company">Radboud University, Nijmegen</div>
+		                <div class="timeMobile">Mar 2014 - Jul 2015</div><!--/timeMobile-->
 		            </div><!--/meta-info-->
 		            <div class="details">
 		                <p>I provided statistical and methodological support to Bachelor and Master students.</p>  
@@ -75,6 +78,7 @@
 		                    <div class="time">Sep 2012 - Jul 2015</div><!--/time-->
 		                </div><!--/upper-row-->
 		                <div class="company">Radboud University, Nijmegen</div><!--/company-->
+		                <div class="timeMobile">Sep 2012 - Jul 2015</div><!--/timeMobile-->
 		            </div><!--/meta-info-->
 		            <div class="details">
 		                <p>I taught practical classes for university-level Bachelor courses (i.e. Methods of Research (B1), Statistics 2 (B2), Psychometric and Decision Analysis (B2), and Data-analysis (B2).</p>  
@@ -121,6 +125,7 @@
 		                    		<div class="time">January 2017</div><!--/time-->
 		                		</div><!--/upper-row-->
 		                		<div class="grant-company">NFU Citrien</div><!--/company-->
+		                		<div class="timeMobile">January 2017</div><!--/timeMobile-->
 		            		</div><!--/meta-info-->
 		            		<div class="details">
 		                		<p class="portfolio-text">Grant awarded by the NFU funded by the Citrienfund, for translating and validating the eHealth Impact Question for the Dutch population of eHealth users (eHIQ-NL). For more information on this project, see <a href="https://www.nfu-ehealth.nl/projecten/alle-projecten/de-nederlandse-e-health-impact-questionnaire-ehiq/">here</a>.</p>  
@@ -162,6 +167,7 @@
 		                    <div class="time">2013 - 2015</div><!--/time-->
 		                </div><!--/upper-row-->
 		                <div class="company">Radboud University, Nijmegen</div><!--/company-->
+		                <div class="timeMobile">2013 - 2015</div><!--/timeMobile-->
 		            </div><!--/meta-info-->
 		            <div class="details">
 		                <p>I completed the Research Master program Cum Laude. The program focused on the use of the scientific method in Behavioural Sciences. During my last year I specialized in Decision-Making research, in particular Risky Decision-Making in Adolescents. My masterthesis is available <a href="./assets/Masterthesis Koen Neijenhuijs.pdf" target="_blank">here</a>.</p>  
@@ -174,6 +180,7 @@
 		                    <div class="time">2014 - 2015</div><!--/time-->
 		                </div><!--/upper-row-->
 		                <div class="company">Radboud University, Nijmegen</div><!--/company-->
+		                <div class="timeMobile">2014 - 2015</div><!--/timeMobile-->
 		            </div><!--/meta-info-->
 		            <div class="details">
 		                <p>During my second year of the Research Master, I travelled to Glasgow University to visir dr. Dale Barr. In Glasgow I worked on the intricacies of writing R packages, programming simulation studies, and the mathematics behind Mixed-Effect Models.</p>  
@@ -186,6 +193,7 @@
 		                    <div class="time">2013 - 2014</div><!--/time-->
 		                </div><!--/upper-row-->
 		                <div class="company">Radboud University, Nijmegen</div><!--/company-->
+		                <div class="timeMobile">2013 - 2014</div><!--/timeMobile-->
 		            </div><!--/meta-info-->
 		            <div class="details">
 		                <p>During my first year of the Research Master, I collaberated with 7 other Master Students from differing disciplines. Tasked by the Health Council of the Netherlands, we delved into the specifics of the 'Wider Implications of Deep Brain Stimulation'. The end result was a report and publication in <a href="https://doi.org/10.1007/s12152-015-9231-x" target="_blank"><i>Neuroethics</i></a>.</p>  
@@ -198,6 +206,7 @@
 		                    <div class="time">2008 - 2013</div><!--/time-->
 		                </div><!--/upper-row-->
 		                <div class="company">Radboud University, Nijmegen</div><!--/company-->
+		                <div class="timeMobile">2008 - 2013</div><!--/timeMobile-->
 		            </div><!--/meta-info-->
 		            <div class="details">
 		                <p>I completed my Bachelor's Degree in Psychology. The Bachelor program focused on both the scientific discipline of Psychology, as its application in practice.</p>  
