--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			</header><!--/header-->
 			<main>
 				<section class="summ-box">
-					<p class="summary-text">If I were to describe myself in two words it would be "Data Nerd". Once I realized I enjoyed using and explaining a large variety of statistical techniques, I realized I wanted to work with data on a daily basis. I enrolled into one of the Top Research Master Programmes in Behavioural Science, which I finished Cum Laude. Currently, I am working as a PhD student at the VU Amsterdam, where I focus on psychometrics and big data. I am looking forward to a career where I can (responsibly) play around with data on a daily basis.</p>
+					<p class="summary-text">If I were to describe myself in two words it would be "Data Nerd". Once I realized I enjoyed using and explaining a large variety of statistical techniques, I realized I wanted to work with data on a daily basis. I enrolled into one of the Top Research Master Programmes in Behavioural Science, which I finished Cum Laude. Next I finished my PhD dissertation focussed on psychometrics and big data in eHealth (defense pending). Currently, I am working as a Data Science Consultant at Ordina. I am looking forward to a long career where I can (responsibly) play around with data on a daily basis.</p>
 					<div class="line-break"></div><!--/line-break-->
 				</section><!--/summ-box-->
 				<section class="experience-box">
@@ -44,8 +44,21 @@
 					<div class="item">
 		            <div class="meta-info">
 		                <div class="upper-row">
+		                    <h3 class="job-title">Data Science Consultant</h3>
+		                    <div class="time">Jan 2020 - Present</div><!--/time-->
+		                </div><!--/upper-row-->
+		                <div class="company">Ordina, Utrecht area</div><!--/company-->
+		                <div class="timeMobile">Jan 2020 - Present</div><!--/timeMobile-->
+		            </div><!--/meta-info-->
+		            <div class="details">
+		                <p>As a Data Science Consultant I find my greatest pleasure in answering questions and solving problems through state-of-the-art analysis techniques used on complex datasets. I strive to have a concrete and positive impact on my client's processes. To achieve this, a thorough preparation and careful work ethic are of paramount importance to me. I am always eager to learn, so I am always on the lookout to learn new (analysis) techniques and become more efficient in applying the techniques I know.</p>
+		            </div><!--/details-->
+					</div><!--/item-->
+					<div class="item">
+		            <div class="meta-info">
+		                <div class="upper-row">
 		                    <h3 class="job-title">PhD Student</h3>
-		                    <div class="time">Aug 2015 - Present</div><!--/time-->
+		                    <div class="time">Aug 2015 - aug 2019</div><!--/time-->
 		                </div><!--/upper-row-->
 		                <div class="company">VU, Amsterdam</div><!--/company-->
 		                <div class="timeMobile">Aug 2015 - Present</div><!--/timeMobile-->
