--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<header>
 				<div class="name-container">
 					<h1>Koen Neijenhuijs</h1>
-					<h4>PhD Student</h4>
+					<h4>Data Scientist</h4>
 				</div><!--/name-container-->
 				<div class="profile-container">
 					<div class="social-container">
