--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 							<li class="linkedin"><a href="http://www.google.com" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a><p class="contacttext"><a class="contacttext" href="https://www.linkedin.com/in/koenneijenhuijs/" target="_blank">linkedin.com/in/koenneijenhuijs</a></p></li>
 							<li class="github"><a href="http://www.google.com" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a><p class="contacttext"><a href="https://github.com/kneijenhuijs" target="_blank">github.com/kneijenhuijs</a></p></li>
 							<li class="twitter"><a href="http://www.google.com" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a><p class="contacttext"><a href="https://twitter.com/KNeijenhuijs" target="_blank">@KNeijenhuijs</a></p></li>
+							<li class="dissertation"><a href="http://www.google.com" target="_blank"><i class="fa fa-book" aria-hidden="true"></i></a><p class="contacttext"><a href="https://kneijenhuijs.com/dissertation" target="_blank">My Ph.D. dissertation</a></p></li>
 						</ul>
 					</div><!--/social-container-->
 					<div class="picture-container">
@@ -64,11 +65,11 @@
 		                <div class="timeMobile">Aug 2015 - Present</div><!--/timeMobile-->
 		            </div><!--/meta-info-->
 		            <div class="details">
-		                <p>As a PhD student at the department of Clinical Psychology at VU Amsterdam, I am investigating Patient Reported Outcome Measures used in the field of psychosocial oncology. I have investigated the psychometric properties of 29 PROMs through a systematic review, validated the Dutch version of the eHealth Impact Questionnaire..</p>
+		                <p>As a PhD student at the department of Clinical Psychology at VU Amsterdam, I investigated the usage of Patient Reported Measures in eHealth, particularly focused on the field of psychosocial oncology. I have investigated the psychometric properties of 29 PROMs through a systematic review, validated the Dutch version of the eHealth Impact Questionnaire, and have used a machine learning algorithm to extract extract symptom clusters based on the PROM responses collected by <a href="http://www.samenlevenmetkanker.nl/?p=305-Oncokompas2.0" target="_blank">Oncokompas 2.0.</a></p>
 
-		                <p>Currently, I am using a machine learning algorithm to extract symptom clusters based on the PROM responses collected by <a href="http://www.samenlevenmetkanker.nl/?p=305-Oncokompas2.0" target="_blank">Oncokompas 2.0.</a></p>
+		                <p>My full dissertation can be accessed by <a href="https://kneijenhuijs.com/dissertation" target="_blank"><b>clicking here</b></a>.</p>
 
-		                <p>Due to my focus and expertise on data-analysis, I am providing statistical support to both internal projects as well as to various research projects of War Child.</p>
+		                <p>Due to my focus and expertise on data-analysis, I have provided statistical support to both internal projects as well as to various research projects of War Child.</p>
 		            </div><!--/details-->
 					</div><!--/item-->
 					<div class="item">
@@ -126,7 +127,7 @@
 							</div><!--/skills-container-->
 						</div><!--/portfolio-div1-->
 						<div class="mydivhide portfolio2">
-							<p class="portfolio-text">My academic career started during my <em>Research Master: Behavioural Science</em> where I specialized in Behavioural Science and advanced data-analysis. In particular, I specialized in Behavioural Risky Decision-Making. Currently, as a PhD student I am focusing on measurement properties of Patient Reported Outcome Measures for cancer patients. I am also looking to delve into the opportunities of using Machine Learning and Data Mining to delve into large datasets of Patient Reported Outcome Measures.</p>
+							<p class="portfolio-text">My academic career started during my <em>Research Master: Behavioural Science</em> where I specialized in Behavioural Science and advanced data-analysis. In particular, I specialized in Behavioural Risky Decision-Making. As a PhD student I focused on measurement properties of Patient Reported Measures used in eHealth, paritcularly focused on the field of socio-oncology. Furthermore, I investigated the opportunities of using Machine Learning and Data Mining to delve into large datasets of Patient Reported Measures. My full dissertation can be accessed by <a href="https://kneijenhuijs.com/dissertation" target="_blank"><b>clicking here</b></a>.</p>
 							<div class="showcase-container">
 								<h2 class="portfolio-title">Publications</h2>
 								<h2 class="portfolio-title">2019</h2>
