Added PhD title

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 		<div class="wrapper">
 			<header>
 				<div class="name-container">
-					<h1>Koen Neijenhuijs</h1>
+					<h1>Koen Neijenhuijs<br>
+					PhD</h1>
 					<h4>Data Scientist</h4>
 				</div><!--/name-container-->
 				<div class="profile-container">
@@ -186,6 +187,19 @@
 				<div class="line-break"></div><!--/line-break-->
 				<section class="education-box">
 					<h2 class="section-title">Education</h2>
+					<div class="item">
+		            <div class="meta-info">
+		                <div class="upper-row">
+		                    <h3 class="job-title">Doctor of Philosophy, <br>Clinical Psychology: eHealth and Data Science</h3>
+		                    <div class="time">2015 - 2020</div><!--/time-->
+		                </div><!--/upper-row-->
+		                <div class="company">VU University, Amsterdam</div><!--/company-->
+		                <div class="timeMobile">2015 - 2020</div><!--/timeMobile-->
+		            </div><!--/meta-info-->
+		            <div class="details">
+		                <p>For my doctoral research I researched the validity / reliability and usability of Patient Reported Measures (PRMs) used in eHealth, and the way in which we can use the data that is collected with them. The result was a dissertation consisting of six chapters and an intermezzo. My full dissertation is available <a href="./assets/dissertation.pdf" target="_blank">here</a>.</p>  
+		            </div><!--/details-->
+					</div><!--/item-->
 					<div class="item">
 		            <div class="meta-info">
 		                <div class="upper-row">
