Change PhD student to DS & Added Ordina info

--- a/index.html
+++ b/index.html
@@ -53,20 +53,23 @@
 		                <div class="timeMobile">Jan 2020 - Present</div><!--/timeMobile-->
 		            </div><!--/meta-info-->
 		            <div class="details">
-		                <p>As a Data Science Consultant I find my greatest pleasure in answering questions and solving problems through state-of-the-art analysis techniques used on complex datasets. I strive to have a concrete and positive impact on my client's processes. To achieve this, a thorough preparation and careful work ethic are of paramount importance to me. I am always eager to learn, so I am always on the lookout to learn new (analysis) techniques and become more efficient in applying the techniques I know.</p>
+		                <p>As a Data Science Consultant I find my greatest pleasure in answering questions and solving problems through state-of-the-art analysis techniques used on complex datasets. I strive to have a concrete and positive impact on my client's processes. To achieve this, a thorough preparation and careful work ethic are of paramount importance to me. I am always eager to learn, so I am always on the lookout to learn new (analysis) techniques and become more efficient in applying the techniques I know.
+
+						I have been involved in an internal project where I was responsible for a business case and textmining. Currently I provide a Data Science curriculum for GO Opleidingen, an institute that provides training for information professionals, and am deployed as a Senior Data-Analyst at Achmea, one of the largest insurance companies in the Netherlands.
+		                </p>
 		            </div><!--/details-->
 					</div><!--/item-->
 					<div class="item">
 		            <div class="meta-info">
 		                <div class="upper-row">
-		                    <h3 class="job-title">PhD Student</h3>
+		                    <h3 class="job-title">Data Scientist (Doctoral)</h3>
 		                    <div class="time">Aug 2015 - aug 2019</div><!--/time-->
 		                </div><!--/upper-row-->
 		                <div class="company">VU, Amsterdam</div><!--/company-->
 		                <div class="timeMobile">Aug 2015 - Present</div><!--/timeMobile-->
 		            </div><!--/meta-info-->
 		            <div class="details">
-		                <p>As a PhD student at the department of Clinical Psychology at VU Amsterdam, I investigated the usage of Patient Reported Measures in eHealth, particularly focused on the field of psychosocial oncology. I have investigated the psychometric properties of 29 PROMs through a systematic review, validated the Dutch version of the eHealth Impact Questionnaire, and have used a machine learning algorithm to extract extract symptom clusters based on the PROM responses collected by <a href="http://www.samenlevenmetkanker.nl/?p=305-Oncokompas2.0" target="_blank">Oncokompas 2.0.</a></p>
+		                <p>As a Doctoral Data Scientist at the department of Clinical Psychology at VU Amsterdam, I investigated the usage of Patient Reported Measures in eHealth, particularly focused on the field of psychosocial oncology. I have investigated the psychometric properties of 29 PROMs through a systematic review, validated the Dutch version of the eHealth Impact Questionnaire, and have used a machine learning algorithm to extract extract symptom clusters based on the PROM responses collected by <a href="http://www.samenlevenmetkanker.nl/?p=305-Oncokompas2.0" target="_blank">Oncokompas 2.0.</a></p>
 
 		                <p>My full dissertation can be accessed by <a href="./assets/dissertation.pdf" target="_blank"><b>clicking here</b></a>.</p>
 
